--- a/index.html
+++ b/index.html
@@ -235,27 +235,6 @@ $(this).removeClass('tunselected');
   display: block;
 }
 	   </style>
-<div class="">
-<div id="over" class="responsivehide" style="margin-left: auto;margin-right: auto;display: block;position:absolute; width:100%; height:100%;margin-top: 10px;text-align:center;">
-<a href="/"><img id="headerlogo" height="60px" src="https://media.discordapp.net/attachments/873208130098565150/883062671866495006/PicsArt_09-03-12.25.29.png?width=477&height=477"></a>
-</div>
-<div id="over" class="responsiveshow" style="margin-left: auto;margin-right: auto;display: block;position:absolute; width:100%; height:100%;margin-top: 10px;">
-<a href="/"><img height="27px" src="https://media.discordapp.net/attachments/873208130098565150/883062671866495006/PicsArt_09-03-12.25.29.png?width=477&height=477"></a>
-</div>
-</div>
-</div>
-<div id="dropdown-search-open" class="conversationnotification" style="display:none;font-size:17px;line-height:30px"><i class="fa fa-search" aria-hidden="true"></i></div>
-<div id="dropdown-search" class="dropdown-content-mobile" style="left: 20%; padding:10px; background-color:#1e1e1e;border-radius:10px;margin-top: 5px;">
-<form method="post" action="search.php">
-<input type="hidden" name="action" value="do_search" />
-<input type="hidden" name="findthreadst" value="1" />
-<input type="hidden" name="forums" value="all" />
-<input type="hidden" name="showresults" value="threads" />
-<input type="text" class="textbox" style="padding:6px !important;" placeholder="Search..." name="keywords" value="" />
-<br /><br />
-<input type="submit" class="button" value="Search" style="padding: 7px 8px !important;font-size:12px !important;" /> <a style="float:right" href="/search.php">Advanced Search</a></div>
-</form>
-</div>
 <style>
 
 	
@@ -496,7 +475,7 @@ window.onclick = function(event) {
  <div class="wrapper"><img class="layer layer-1" src="" style="display:none">
 <div class="hero-inner">
 <div class="hero-tittle">
-<h1>Come and Join the <b style="color:#d90421;">#SHOOTASGANG</b> and <b style="color:#d90421;">and join the cult.</b></h1>
+<h1 Class="font-weight:bold !important">Come and Join the <b style="color:#d90421;font-weight:bold !important">#SHOOTASGANG</b> and <b style="color:#d90421;font-weight:bold !important">and join the cult.</b></h1>
 <p class="headerSmallText">DM<b style="color:#d90421;font-weight:bold !important"> dax.#1337</b> and get yourself a page right now !</p>
 </div>
 </div>
