--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ window.onclick = function(event) {
  <div class="wrapper"><img class="layer layer-1" src="" style="display:none">
 <div class="hero-inner">
 <div class="hero-tittle">
-<h1 Class="font-weight:bold !important">Come and Join the <b style="color:#d90421;font-weight:bold !important">#SHOOTASGANG</b> and <b style="color:#d90421;font-weight:bold !important">and join the cult.</b></h1>
+<p style="font-weight:bold !important">Come and Join the <p style="color:#d90421;font-weight:bold !important">#SHOOTASGANG</p> and <p style="color:#d90421;font-weight:bold !important">and join the cult.</p></p>
 <p class="headerSmallText">DM<b style="color:#d90421;font-weight:bold !important"> dax.#1337</b> and get yourself a page right now !</p>
 </div>
 </div>
