--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Shootas| Rep Pages &amp; #SHOOTASGANG</title>
 <meta property="og:title" content="Shootas| Rep Pages &amp; #SHOOTASGANG" />
 <meta property="og:description" content="Shootas is a site where you can make a profile and get rep to be renowned as a trusted seller. Join The" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/873208130098565150/883062671866495006/PicsArt_09-03-12.25.29.png?width=477&height=477" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/878188572765732884/883071913994387486/dcdpxir-882edc6b-d9ac-41c8-89c3-baf34427be8c.gif" />
 
 
 <script src="/cdn-cgi/apps/head/PKqpDrWoiFlKM65xrXC_xqrdSlk.js"></script><script type="c5f96e5ea156493a9dbe8330-text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
