--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Shootas| Rep Pages &amp; #SHOOTASGANG</title>
-<meta property="og:title" content="Shootas| Rep Pages &amp; #SHOOTASGANG" />
+<title>Shootas | Rep Pages &amp; #SHOOTASGANG</title>
+<meta property="og:title" content="Shootas | Rep Pages &amp; #SHOOTASGANG" />
 <meta property="og:description" content="Shootas is a site where you can make a profile and get rep to be renowned as a trusted seller. Join The" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/878188572765732884/883071913994387486/dcdpxir-882edc6b-d9ac-41c8-89c3-baf34427be8c.gif" />
+<meta property="og:image" content="https://cdn.lowgif.com/small/bd882dd60cc171b0-aesthetic-transparent-tumblr.gif" />
 
 
 <script src="/cdn-cgi/apps/head/PKqpDrWoiFlKM65xrXC_xqrdSlk.js"></script><script type="c5f96e5ea156493a9dbe8330-text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -235,6 +234,27 @@ $(this).removeClass('tunselected');
   display: block;
 }
 	   </style>
+<div class="">
+<div id="over" class="responsivehide" style="margin-left: auto;margin-right: auto;display: block;position:absolute; width:100%; height:100%;margin-top: 10px;text-align:center;">
+<a href="/"><img id="headerlogo" height="60px" src="https://cdn.lowgif.com/small/bd882dd60cc171b0-aesthetic-transparent-tumblr.gif"></a>
+</div>
+<div id="over" class="responsiveshow" style="margin-left: auto;margin-right: auto;display: block;position:absolute; width:100%; height:100%;margin-top: 10px;">
+<a href="/"><img height="27px" src="https://media.discordapp.net/attachments/873208130098565150/883062671866495006/PicsArt_09-03-12.25.29.png?width=477&height=477"></a>
+</div>
+</div>
+</div>
+<div id="dropdown-search-open" class="conversationnotification" style="display:none;font-size:17px;line-height:30px"><i class="fa fa-search" aria-hidden="true"></i></div>
+<div id="dropdown-search" class="dropdown-content-mobile" style="left: 20%; padding:10px; background-color:#1e1e1e;border-radius:10px;margin-top: 5px;">
+<form method="post" action="search.php">
+<input type="hidden" name="action" value="do_search" />
+<input type="hidden" name="findthreadst" value="1" />
+<input type="hidden" name="forums" value="all" />
+<input type="hidden" name="showresults" value="threads" />
+<input type="text" class="textbox" style="padding:6px !important;" placeholder="Search..." name="keywords" value="" />
+<br /><br />
+<input type="submit" class="button" value="Search" style="padding: 7px 8px !important;font-size:12px !important;" /> <a style="float:right" href="/search.php">Advanced Search</a></div>
+</form>
+</div>
 <style>
 
 	
@@ -475,9 +495,14 @@ window.onclick = function(event) {
  <div class="wrapper"><img class="layer layer-1" src="" style="display:none">
 <div class="hero-inner">
 <div class="hero-tittle">
-<h1 style="font-weight:bold !important">Come and Join the <b style="color:#d90421;font-weight:bold !important">#SHOOTASGANG</b> and <b style="color:#d90421;font-weight:bold !important">and join the cult.</b></h1>
+<h1>JOIN THE <b style="color:#d90421;font-weight:bold !important">#SHOOTASGANG</b> TODAY</h1>
+<br>
+<h1> A PAGE FOR <b style="color:#d90421;font-weight:bold !important">EVERYONE</b></h1>
 <p class="headerSmallText">DM<b style="color:#d90421;font-weight:bold !important"> dax.#1337</b> and get yourself a page right now !</p>
 </div>
+<div class="hero-image responsivehide">
+	<div class="radial-gradient-hero"></div>
+	<img class="layer rocket" style="width:80%" src="https://ogusers.com/stabilizer/svg/active_social.svg">
 </div>
 </div>
 
