--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@ window.onclick = function(event) {
 	<img class="layer rocket" style="width:80%" src="https://ogusers.com/stabilizer/svg/active_social.svg">
 </div>
 </div>
+	 <a class="profile_message"href="profiles/profiles.html" >User Profiles</a>
 
 </div>
 <script type="c5f96e5ea156493a9dbe8330-text/javascript">
